--- a/Client/Main.xaml
+++ b/Client/Main.xaml
@@ -7,6 +7,13 @@
         mc:Ignorable="d"
         Title="Main" Height="450" Width="800">
     <Grid>
+        <StackPanel Orientation="Vertical" >
+            <Button Content="Create Room" Click="createRoom_Click" HorizontalAlignment="Center" Margin="0,20,0,0"></Button>
+            <Button Content="Join Room" Click="JoinRoom_Click" HorizontalAlignment="Center" Margin="0,20,0,0"></Button>
+            <Button Content="Statistics" Click="Statistics_Click" HorizontalAlignment="Center" Margin="0,20,0,0"></Button>
+            <Button Content="Exit" Click="Exit_Click" HorizontalAlignment="Center" Margin="0,20,0,0"></Button>
+
+        </StackPanel>
         
     </Grid>
 </Window>
