--- a/Client/RoomAdmin.xaml
+++ b/Client/RoomAdmin.xaml
@@ -1,21 +1,22 @@
-﻿<Window x:Class="Client.Room"
+﻿<Window x:Class="Client.RoomAdmin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
         mc:Ignorable="d"
-        Title="room" Height="450" Width="800">
+        Title="RoomAdmin" Height="450" Width="800">
     <Grid>
-        <Button Content="Exit Room" Click="Leave_Click" Width="70" Height="40" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="20"/>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,200">
             <TextBlock x:Name="Title" FontSize="30" Text="in room" Margin="0,0,0,20"/>
-            <TextBlock x:Name="AdminName" Text="admin: "/>
             <TextBlock x:Name="QuestionCount" Text="question count: "/>
             <TextBlock x:Name="AnswerTimeout" Text="answer timeout: "/>
+            <TextBlock x:Name="MaxUsers" Text="max users: "/>
             <TextBlock Text="current participants: " HorizontalAlignment="Center" Margin="0,0,0,10"/>
         </StackPanel>
-        <ListView x:Name="PlayerList" BorderThickness="1" HorizontalAlignment="Center" Height="150" Margin="0,100,0,0" ItemsSource="{Binding}" ScrollViewer.VerticalScrollBarVisibility="Visible">
-        </ListView>
+        <ListBox x:Name="PlayerList" BorderThickness="1" HorizontalAlignment="Center" Height="150" Margin="0,100,0,0" ItemsSource="{Binding}" ScrollViewer.VerticalScrollBarVisibility="Visible">
+        </ListBox>
+        <Button Content="start game" Click="Start_Click"  Width="130" Height="40" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20"/>
+        <Button Content="close room" Click="Close_Click"  Width="130" Height="40" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="20"/>
     </Grid>
 </Window>
