--- a/Client/Signup.xaml
+++ b/Client/Signup.xaml
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.Column="0" >username:</Label>
         <TextBox Grid.Column="1" Margin="0,0,0,10" x:Name="name" />
-        <Label Grid.Row="1" Grid.Column="0" >pasword:</Label>
+        <Label Grid.Row="1" Grid.Column="0" >password:</Label>
         <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,10" x:Name="pass" />
         <Label Grid.Row="2" Grid.Column="0" >email:</Label>
         <TextBox Grid.Row="2" Grid.Column="1" x:Name="email" />
